  ...) after a successfull upload
  (friebe)
- Fixed peer.ftp.FtpDir::findEntry() 
  (gellweiler, kiesel)
- Fixed FTP server API to parse parameters to NLST correctly and report
  directories as single entities if "-d" is given in NLST and LIST
  (gellweiler, friebe)
- Fixed lang.reflect.Proxy to add type hints to generated methods
  (friebe)

Features
~~~~~~~~
- Added optional parameter "hinted" to lang.reflect.Argument::getType()
  with which one can retrieve the type hint's type name.
  (friebe)
- Added lang.reflect.Argument::getDefaultValue() method. In contrast to 
  getDefault() it returns the value as-is (not as a string)
  (friebe)


Version 5.6.4, released 2007-12-25
----------------------------------
SVN version: 11651

Heads up!
~~~~~~~~~
- Removed deprecated rdbms.Criteria::newInstance() method
  (friebe)
- Removed deprecated lang.reflect.Routine::returnsReference() method
  (friebe)
- Refactored unittest.TestSuite/unittest.TestCase for added listener API.
  With these changes, test cases cannot be run on their own but must always
  be added to a suite before - it can run single tests via runTest()
  (friebe)
- An implementation of scriptlet.rpc.AbstractRpcRequest::getMessage()
  must set the message's encoding on it's own now, the router does
  not do this anymore
  (kiesel)
- Removed constant SKELETON_PATH
  (friebe)
- Changed stack trace elements generated from PHP error message to no 
  longer contain the class. The filename cannot really be translated to 
  the fully qualified class name in a consistent *and* fast-enough manner
  (friebe)
- Made util.Properties::fromFile() throw an IOException when the given
  file cannot be read
  (friebe)
- Deprecated lang.archive.ArchiveReader in favor of lang.archive.Archive
  http://news.xp-framework.net/article/226/2007/12/11/ArchiveReader_deprecation
  (friebe)

RFCs
~~~~
- Implemented RFC #0145: Make unittests strict
  (friebe, kiesel)

Bugfixes
~~~~~~~~